--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,16 @@
   font-size: 16px;
 }
 
+.markdown > * {
+  all: revert;
+}
+
+.markdown > pre {
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  width: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
